...
                                }
                            }
                        }
                        Spacer()
                    }
                } hidden: {
                    Text("Authenticate")
                        .foregroundColor(.yellowLightSafe)
                }
                .accessibilityLabel(Text("Authenticate"))
            }
            Spacer()
        }
...
                TextField("Name", text: $seed.name) { isEditing in
                    withAnimation {
                        isEditingNameField = isEditing
                    }
                }
                .focused($nameIsFocused)
                .accessibility(label: Text("Name Field"))
                if !isEditingNameField {
                    nameFieldMenu
                }
            }
            .validation(seed.nameValidator)
            .formSectionStyle()
...
            TextEditor(text: $seed.note)
                .id("notes")
                .frame(minHeight: 300)
                .fixedVertical()
                .formSectionStyle()
                .focused($notesIsFocused)
                .accessibility(label: Text("Notes Field"))
        }
    }
    
    var capacityInfo: some View {
        VStack(alignment: .leading, spacing: 3) {
            Text("Length: `\(seed.note.count)` characters")
...
                    }
                }
                ContextMenuItem(title: "Other Key Derivations", image: Image.key) {
                    presentedSheet = .key
                }
            } label: {
                ExportDataButton("Derive Key", icon: Image.key, isSensitive: true) {}
            }
            .menuStyle(BorderlessButtonMenuStyle())
            .disabled(!isValid)
            .accessibility(label: Text("Derive Key Menu"))
            .accessibilityRemoveTraits(.isImage)

...
            } else {
                HStack(alignment: .top) {
                    Text(markdown: "Associate a primary output descriptor derived from this seed. You may paste either a textual descriptor or a `ur:envelope` containing a descriptor.")
                        .font(.footnote)
                        .foregroundColor(.secondary)
                    Spacer()
                    ExportDataButton("Paste", icon: Image.paste, isSensitive: false) {
                        let outputDescriptor: OutputDescriptor?
                        if let string = UIPasteboard.general.string?.trim() {
                            if
                                let desc = try? OutputDescriptor(string)
                            {
                                outputDescriptor = desc
...
