...
                            model.insertSeed(seed, at: index)
                        }
                    }
                }
            }
        }
        .navigationTitle("Seeds")
        .navigationBarItems(leading: leadingNavigationBarItems, trailing: trailingNavigationBarItems)
        .onChange(of: newSeed) { value in
            if newSeed != nil {
                isNameSeedPresented = true
            }
        }
...
        Button {
            isNewSeedPresented = true
        } label: {
            Image(systemName: "plus")
                .font(.title)
                .padding([.top, .bottom, .trailing], 10)
                .accessibility(label: Text("Add Seed"))
        }
        .sheet(isPresented: $isNewSeedPresented) {
            NewSeed(isPresented: $isNewSeedPresented) { seed in
                newSeed = seed
            }
        }
...
