...
                RoundedRectangle(cornerRadius: 10)
                    .stroke(Color.secondary, lineWidth: 4)
            )
        }
        .foregroundColor(.primary)
        .alert(isPresented: $isStrengthWarningPresented) { () -> Alert in
            Alert(title: .init("Weak Entropy"), message: .init("Seeds generated with this level of entropy may not offer good security."),
                  primaryButton: .cancel(),
                  secondaryButton: .destructive(Text("Continue")) {
                    commit()
                  }
            )
        }
    }

...
