...
        Button {
            presentedSheet = .settings
        } label: {
            Image(systemName: "gearshape")
                .font(.title)
                .padding([.top, .bottom, .leading], 10)
                .accessibility(label: Text("Settings"))
        }
    }
    
    var leadingItems: some View {
        HStack(spacing: 20) {
            infoButton
...
        Button {
            presentedSheet = .info
        } label: {
            Image(systemName: "info.circle")
                .font(.title)
                .padding([.top, .bottom, .trailing], 10)
                .accessibility(label: Text("Documentation"))
        }
    }
    
    var scanButton: some View {
        Button {
            presentedSheet = .scan
...
